# open-bitcoin

./: .bazelrc  .gitignore  .gitmodules  AGENTS.bright-builds.md  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  bright-builds-rules.audit.md
.bright-builds-rules-backups/20260410T105533Z/: CONTRIBUTING.md
.bright-builds-rules-backups/20260410T105533Z/scripts/: bright-builds-auto-update.sh
.codex/tasks/: lessons.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: bright-builds-auto-update.yml  ci.yml
.planning/: ARCHITECTURE.md  CONVENTIONS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STACK.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT-PHASE-27.md  v1.1-MILESTONE-AUDIT-PHASE-29.md  v1.1-MILESTONE-AUDIT-PHASE-32.md  v1.1-MILESTONE-AUDIT-RERUN.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-workspace-baseline-and-guardrails/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-SECURITY.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-core-domain-and-serialization-foundations/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-SECURITY.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-consensus-validation-engine/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  (+9 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/architecture/: cli-command-architecture.md  config-precedence.md  operator-observability.md  status-snapshot.md  storage-decision.md
docs/metrics/: lines-of-code.md
docs/operator/: runtime-guide.md
docs/parity/: README.md  benchmarks.md  checklist.md  deviations-and-unknowns.md  index.json  release-readiness.md  source-breadcrumbs.json  threat-model-v1.3.md
scripts/: check-bazel-build-provenance.ts  check-benchmark-report.ts  check-file-lengths.sh  check-panic-sites.sh  check-parity-breadcrumbs.ts  check-pure-core-deps.sh  check-v1.3-release-boundaries.ts  ensure-git-hooks.sh  generate-loc-report.mjs  generate-loc-report.ts  install-git-hooks.sh  open-bitcoin-workspace-status.sh  panic-sites.allowlist  pure-core-crates.txt  run-benchmarks.sh  run-live-mainnet-smoke.ts  test-check-file-lengths.sh  test-ensure-git-hooks.sh  test-generate-loc-report.sh  test-run-live-mainnet-smoke.sh  verify.sh
seed-prompts/: 2026-04-10-seed-prompt-refined-with-codex.md  2026-04-10-seed-prompt.md
(+664 files in other folders)
