alias(
    name = "core",
    actual = "//packages/open-bitcoin-core:open_bitcoin_core_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "primitives",
    actual = "//packages/open-bitcoin-primitives:open_bitcoin_primitives_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "codec",
    actual = "//packages/open-bitcoin-codec:open_bitcoin_codec_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "consensus",
    actual = "//packages/open-bitcoin-consensus:open_bitcoin_consensus_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "node",
    actual = "//packages/open-bitcoin-node:open_bitcoin_node_lib",
    visibility = ["//visibility:public"],
)
