alias(
    name = "chainstate",
    actual = "//packages/open-bitcoin-chainstate:open_bitcoin_chainstate_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "core",
    actual = "//packages/open-bitcoin-core:open_bitcoin_core_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "network",
    actual = "//packages/open-bitcoin-network:open_bitcoin_network_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "primitives",
    actual = "//packages/open-bitcoin-primitives:open_bitcoin_primitives_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "codec",
    actual = "//packages/open-bitcoin-codec:open_bitcoin_codec_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "consensus",
    actual = "//packages/open-bitcoin-consensus:open_bitcoin_consensus_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "node",
    actual = "//packages/open-bitcoin-node:open_bitcoin_node_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "rpc",
    actual = "//packages/open-bitcoin-rpc:open_bitcoin_rpc_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "cli",
    actual = "//packages/open-bitcoin-cli:open_bitcoin_cli_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "mempool",
    actual = "//packages/open-bitcoin-mempool:open_bitcoin_mempool_lib",
    visibility = ["//visibility:public"],
)

alias(
    name = "wallet",
    actual = "//packages/open-bitcoin-wallet:open_bitcoin_wallet_lib",
    visibility = ["//visibility:public"],
)
